<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="user_welcome_btn">欢迎登录彩管家</string>
    <string name="user_inputphone_et">请输入彩管家账号</string>
    <string name="user_inputpwd_et">请输入密码</string>
    <string name="user_loginforgetpwd_tv">忘记密码？</string>
    <string name="user_login_btn">立即登录</string>
    <string name="user_czyoauht_btn">彩之云授权登录</string>
    <string name="user_loginor_tv">或</string>
    <string name="user_username_tv">姓名</string>
    <string name="user_usersex_tv">性别</string>
    <string name="user_usercompany_tv">公司</string>
    <string name="user_userpart_tv">部门</string>
    <string name="user_userjob_tv">职位</string>
    <string name="user_usermobile_tv">手机号码</string>
    <string name="user_useremail_tv">Email</string>
    <string name="user_bindmobile_tv">绑定手机号</string>
    <string name="user_bindmobile_jump_tv">跳过</string>
    <string name="user_bindmobile_title_tv">为了您的登录体验，建议您绑定手机号</string>
    <string name="user_bindmobile_tip_tv">绑定后即可通过手机号登录</string>
    <string name="user_bindmobile_input_tv">请输入手机号码</string>
    <string name="user_bindmobile_mms_tv">请输入短信验证码</string>
    <string name="user_bindmobile_bind_tv">绑定</string>
    <string name="user_bindmobile_getmms_tv">获取验证码</string>
    <string name="user_key_search">搜索门禁名称</string>
    <string name="user_contact_service">联系客服</string>
    <string name="user_register"> 新用户注册</string>
    <string name="user_account">账号</string>
    <string name="user_register_phone">手机号注册</string>
    <string name="user_register_mobile">请输入手机号码</string>
    <string name="user_register_next">下一步</string>
    <string name="user_register_tologin">去登陆</string>
    <string name="user_register_tip">该手机号已注册，请直接登录</string>
    <string name="user_register_sms">请输入短信验证码</string>
    <string name="user_register_resms">重新发送</string>
    <string name="user_register_pwd">请设置8-18位字母+数字密码</string>
    <string name="user_register_setpwd">设置密码</string>
    <string name="user_company_title">填写基本信息</string>
    <string name="user_company_jump">跳过</string>
    <string name="user_company_name">姓名</string>
    <string name="user_company_real">请填写真实姓名</string>
    <string name="user_company_company">所在企业/团队名称</string>
    <string name="user_company_tocgj">进入彩管家</string>
    <string name="user_company_select">请选择企业/团队名称</string>
    <string name="user_company_top">所在企业/团队</string>
    <string name="user_company_create">创建</string>
    <string name="user_company_input">请输入公司名称</string>
    <string name="user_company_join">申请加入</string>
    <string name="user_company_createcom">没有找到相关企业/团队，去创建团队</string>

</resources>
