<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/top_bind_mobile"
        layout="@layout/base_actionbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_8dp"
        android:background="@color/line_mine_bg"
        app:layout_constraintTop_toBottomOf="@id/top_bind_mobile" />

    <TextView
        android:id="@+id/tv_bindmobile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_60dp"
        android:text="@string/user_bindmobile_title_tv"
        android:textColor="@color/color_131719"
        android:textSize="@dimen/font_16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bind_mobile" />

    <TextView
        android:id="@+id/tv_bindmobile_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20dp"
        android:text="@string/user_bindmobile_tip_tv"
        android:textColor="@color/color_999faa"
        android:textSize="@dimen/font_14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bindmobile_title" />

    <EditText
        android:id="@+id/et_bindmobile_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_44dp"
        android:layout_marginLeft="@dimen/size_40dp"
        android:layout_marginTop="@dimen/size_28dp"
        android:layout_marginRight="@dimen/size_40dp"
        android:background="@null"
        android:hint="@string/user_bindmobile_input_tv"
        android:inputType="phone"
        android:singleLine="true"
        android:textColor="@color/color_131719"
        android:textColorHint="@color/login_tv_gray_account"
        android:textSize="@dimen/font_16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_bindmobile_tip" />

    <ImageView
        android:id="@+id/iv_bindmobile_deloa"
        android:layout_width="@dimen/size_22dp"
        android:layout_height="@dimen/size_22dp"
        android:layout_marginEnd="@dimen/size_5dp"
        android:layout_marginRight="@dimen/size_5dp"
        android:contentDescription="@null"
        android:src="@mipmap/login_icon_delete_normal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/et_bindmobile_phone"
        app:layout_constraintRight_toRightOf="@id/et_bindmobile_phone"
        app:layout_constraintTop_toTopOf="@+id/et_bindmobile_phone" />

    <View
        android:id="@+id/view_bindmobile_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:layout_marginLeft="@dimen/size_40dp"
        android:layout_marginRight="@dimen/size_40dp"
        android:background="@color/line_login_index"
        app:layout_constraintTop_toBottomOf="@id/et_bindmobile_phone" />

    <EditText
        android:id="@+id/et_bindmobile_mms"
        android:layout_width="@dimen/size_200dp"
        android:layout_height="@dimen/size_44dp"
        android:layout_marginLeft="@dimen/size_40dp"
        android:layout_marginRight="@dimen/size_40dp"
        android:background="@null"
        android:hint="@string/user_bindmobile_mms_tv"
        android:inputType="number"
        android:singleLine="true"
        android:textColor="@color/color_131719"
        android:textColorHint="@color/login_tv_gray_account"
        android:textSize="@dimen/font_16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_bindmobile_view" />

    <TextView
        android:id="@+id/tv_bindmobile_getmms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/size_40dp"
        android:text="@string/user_bindmobile_getmms_tv"
        android:textColor="@color/blue_index"
        android:textSize="@dimen/font_12sp"
        app:layout_constraintBottom_toBottomOf="@id/et_bindmobile_mms"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_bindmobile_mms" />

    <View
        android:id="@+id/view_bindmobile_viewtwo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:layout_marginLeft="@dimen/size_40dp"
        android:layout_marginRight="@dimen/size_40dp"
        android:background="@color/line_login_index"
        app:layout_constraintTop_toBottomOf="@id/et_bindmobile_mms" />

    <Button
        android:id="@+id/btn_bindmobile_bind"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_44dp"
        android:layout_marginLeft="@dimen/size_30dp"
        android:layout_marginTop="@dimen/size_20dp"
        android:layout_marginRight="@dimen/size_30dp"
        android:background="@drawable/bg_login_button_gray"
        android:stateListAnimator="@null"
        android:text="@string/user_bindmobile_bind_tv"
        android:textColor="@color/line_login_button"
        android:textSize="@dimen/font_16sp"
        app:layout_constraintTop_toBottomOf="@id/et_bindmobile_mms" />
</android.support.constraint.ConstraintLayout>
