<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context="com.tg.user.activity.CompanyInfoActivity">

    <include
        android:id="@+id/company_top"
        layout="@layout/base_actionbar" />

    <View
        android:id="@+id/view_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_8dp"
        android:background="@color/color_f6f6f6"
        app:layout_constraintTop_toBottomOf="@id/company_top" />

    <TextView
        android:id="@+id/tv_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_40dp"
        android:layout_marginTop="@dimen/size_80dp"
        android:text="@string/user_company_name"
        android:textColor="@color/color_647786"
        android:textSize="@dimen/font_14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_top" />

    <EditText
        android:id="@+id/et_company_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_20dp"
        android:layout_marginLeft="@dimen/size_40dp"
        android:layout_marginTop="@dimen/size_30dp"
        android:layout_marginRight="@dimen/size_40dp"
        android:background="@null"
        android:hint="@string/user_company_real"
        android:maxLength="18"
        android:textColor="@color/color_131719"
        android:textColorHint="@color/color_bbc0cb"
        android:textSize="@dimen/font_16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_company_name" />

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:layout_marginLeft="@dimen/size_40dp"
        android:layout_marginTop="@dimen/size_14dp"
        android:layout_marginRight="@dimen/size_40dp"
        android:background="@color/color_ededee"
        app:layout_constraintTop_toBottomOf="@id/et_company_name" />

    <TextView
        android:id="@+id/tv_company_teamname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_40dp"
        android:layout_marginTop="@dimen/size_16dp"
        android:text="@string/user_company_company"
        android:textColor="@color/color_647786"
        android:textSize="@dimen/font_14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_line" />

    <TextView
        android:id="@+id/tv_company_team"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_20dp"
        android:layout_marginLeft="@dimen/size_40dp"
        android:layout_marginTop="@dimen/size_30dp"
        android:layout_marginRight="@dimen/size_80dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/user_company_select"
        android:textColor="@color/color_bbc0cb"
        android:textSize="@dimen/font_16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_company_teamname" />

    <ImageView
        android:id="@+id/iv_company_select"
        android:layout_width="@dimen/size_30dp"
        android:layout_height="@dimen/size_30dp"
        android:layout_marginRight="@dimen/size_40dp"
        android:padding="@dimen/size_5dp"
        android:src="@mipmap/icon_more"
        app:layout_constraintBottom_toBottomOf="@id/tv_company_team"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_company_team" />

    <View
        android:id="@+id/view_line_bot"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:layout_marginLeft="@dimen/size_40dp"
        android:layout_marginTop="@dimen/size_14dp"
        android:layout_marginRight="@dimen/size_40dp"
        android:background="@color/color_ededee"
        app:layout_constraintTop_toBottomOf="@id/tv_company_team" />

    <Button
        android:id="@+id/btn_company_tocgj"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_44dp"
        android:layout_marginLeft="@dimen/size_40dp"
        android:layout_marginTop="@dimen/size_32dp"
        android:layout_marginRight="@dimen/size_40dp"
        android:background="@drawable/bg_login_button_gray"
        android:text="@string/user_company_tocgj"
        android:textColor="@color/color_bbbbbb"
        android:textSize="@dimen/font_16sp"
        app:layout_constraintTop_toBottomOf="@id/view_line_bot" />
</androidx.constraintlayout.widget.ConstraintLayout>
