<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context="com.tg.user.activity.RegisterActivity">

    <include
        android:id="@+id/base_top"
        layout="@layout/base_actionbar" />

    <View
        android:id="@+id/view_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_8dp"
        android:background="@color/color_f6f6f6"
        app:layout_constraintTop_toBottomOf="@id/base_top" />

    <TextView
        android:id="@+id/tv_register_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_40dp"
        android:layout_marginTop="@dimen/size_80dp"
        android:text="@string/user_account"
        android:textColor="@color/color_647786"
        android:textSize="@dimen/font_14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_bg" />

    <com.tg.coloursteward.view.ClearEditText
        android:id="@+id/et_register_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_20dp"
        android:layout_marginLeft="@dimen/size_40dp"
        android:layout_marginTop="@dimen/size_30dp"
        android:layout_marginRight="@dimen/size_40dp"
        android:background="@null"
        android:hint="@string/user_register_mobile"
        android:inputType="phone"
        android:maxLength="11"
        android:textColor="@color/color_131719"
        android:textColorHint="@color/color_bbc0cb"
        android:textSize="@dimen/font_16sp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/tv_register_account" />

    <LinearLayout
        android:id="@+id/ll_register_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register_account">

        <EditText
            android:id="@+id/et_register_code"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/user_register_sms"
            android:inputType="number"
            android:maxLength="8"
            android:textColor="@color/color_131719"
            android:textColorHint="@color/color_bbc0cb"
            android:textCursorDrawable="@drawable/my_cursor"
            android:textSize="@dimen/font_16sp" />

        <Button
            android:id="@+id/btn_register_getcode"
            android:layout_width="@dimen/size_70dp"
            android:layout_height="@dimen/size_30dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/coil_register_blue"
            android:gravity="center"
            android:text="@string/user_register_resms"
            android:textColor="@color/color_1890ff"
            android:textSize="@dimen/font_12sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_register_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/size_5dp"
            android:text="0"
            android:textColor="@color/color_999faa"
            android:textSize="@dimen/font_12sp"
            android:visibility="visible" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_register_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_30dp"
        android:layout_marginLeft="@dimen/size_40dp"
        android:layout_marginTop="@dimen/size_20dp"
        android:layout_marginRight="@dimen/size_40dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_register_account">

        <ImageView
            android:id="@+id/iv_register_showpwd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/size_25dp"
            android:adjustViewBounds="true"
            android:padding="@dimen/size_4dp"
            android:src="@drawable/work_icon_invisible" />

        <com.tg.coloursteward.view.ClearEditText
            android:id="@+id/et_register_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_20dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/iv_register_showpwd"
            android:layout_marginRight="@dimen/size_20dp"
            android:background="@null"
            android:hint="@string/user_register_pwd"
            android:inputType="textPassword"
            android:maxLength="18"
            android:singleLine="true"
            android:textColor="@color/color_131719"
            android:textColorHint="@color/color_bbc0cb"
            android:textSize="@dimen/font_16sp" />

    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:layout_marginLeft="@dimen/size_40dp"
        android:layout_marginTop="@dimen/size_60dp"
        android:layout_marginRight="@dimen/size_40dp"
        android:background="@color/color_ededee"
        app:layout_constraintTop_toBottomOf="@id/tv_register_account" />

    <Button
        android:id="@+id/btn_register_next"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_44dp"
        android:layout_marginLeft="@dimen/size_40dp"
        android:layout_marginTop="@dimen/size_90dp"
        android:layout_marginRight="@dimen/size_40dp"
        android:background="@drawable/bg_login_button_gray"
        android:text="@string/user_register_next"
        android:textColor="@color/color_bbbbbb"
        android:textSize="@dimen/font_16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_register_account" />

</androidx.constraintlayout.widget.ConstraintLayout>
